# spacelabview

./: .gitignore  AgarisProj.code-workspace  README.md  agaris.example.toml  config.go  go.mod  go.sum  requirements.txt  server.go  web.go  webroot
api/: api.go  error.go  grid.go  notification.go  notify.go  resp.go  sessionChat.go  sessionGrids.go  sessionPlanets.go  vector.go
luts/: matcoloravg.json  matcolormap.json  matfiles.json
nextgen/: .gitignore  Cargo.toml
nextgen/src/: main.rs
nextgen/src/geom/: cube.rs  data.rs  mod.rs
nextgen/src/gpu/: gpu.rs  mod.rs  texture.rs
nextgen/src/render/: mod.rs  multimaterialgroup.rs  planetplugin.rs  sampler.rs
nextgen/src/spaceengineers/: atmosphere.rs  environment.rs  id.rs  material.rs  mesh_post_processing.rs  mod.rs  oremapping.rs  planet_generator_definition.rs  sound.rs  vector.rs  weather.rs
nextgen/src/spacelab/: coloravg.rs  compute_normal.wgsl  latlutgen.wgsl  lutgen.rs  lutgen_gpu.rs  matcolormap.rs  material_gpu.rs  materialgen.wgsl  matfile.rs  mod.rs  normal.rs  slopegen.wgsl
planetmeta/: agaris_ii_planetmeta.json  alien_planetmeta.json  earthlike_planetmeta.json  europa_planetmeta.json  moon_planetmeta.json  pertam_planetmeta.json  planet_agaris_planetmeta.json  planet_crait_planetmeta.json  planet_kamino_planetmeta.json  planet_lezuno_planetmeta.json  planet_lorus_planetmeta.json  planet_thora_4_planetmeta.json  planetbylen_planetmeta.json  titan_planetmeta.json  triton_planetmeta.json
spacelab/: api.go  faction.go  global.go  grid.go  info.go  interact.go  message.go  notify.go  player.go  (+3 more)
(+40 files in other folders)
