[package]
name = "nextgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.png]
opt-level = 3
[profile.dev.package.image]
opt-level = 3

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
futures = "0.3.28"
futures-intrusive = "0.5.0"
image = "0.24.6"
nalgebra = "0.32.2"
quick-xml = "0.28.2"
rayon = "1.7.0"
renderdoc = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"
wgpu = "0.16.1"
